syntax="proto3";

package task;

import "login.proto";
option go_package="service";

message Profile {
    string token = 1;   
	string name = 2;
	string phoneNum = 3; 
    string desription = 4;
	string email = 5;
    string workplace = 6;
}

service ProfileService {
    rpc SetProfile(Profile) returns (Result) {}
    rpc GetProfile(Token) returns (Profile) {}
}